<resources>
    <string name="app_name">HealthApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label">Ingrese correo electronico</string>
    <string name="password_label">Ingrese la contraseña</string>
    <string name="forgot_label">Olvidaste la contraseña ?</string>
    <string name="login_button_label">Ingresar</string>
    <string name="forgot_button_label">Cambiar la contraseña</string>
    <string name="name_hint_label">Ingrese el nombre</string>
    <string name="male_label">Masculino</string>
    <string name="female_label">Femenino</string>
    <string name="other_label">Otro</string>
    <string name="signup_button_label">Crear cuenta</string>
    <string name="label3">Tengo una cuenta</string>
    <string name="label4">!Iniciar sesión¡</string>
    <string name="email_error">Email no valido</string>
    <string name="password_error">Contraseña no valido</string>
    <string name="home_label">Inicio</string>
    <string name="location_label">Mi localizacion</string>
    <string name="specialist_label">Especialistas</string>
    <string name="profile_label">Mi perfil</string>
    <string name="home_title">Cambia tu vida para mejor</string>
    <string name="home_subtitle">Agenda una cita y te ayudaremos con el problema al que te enfrentas.</string>
    <string name="home_recycler_title">Nuestros servicios</string>
    <string name="autocomplete_hint">Buscar</string>
    <string name="specialist_title">Nuestros especialistas</string>
    <string name="specialist_subtitle">Agenda una cita con un especialista de tu preferencia.</string>
    <string name="specialist_recycler_title">Especialidades</string>
</resources>