<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/home_fragment_banner"
        android:layout_width="0dp"
        android:layout_height="@dimen/banner_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/banner2"
        android:scaleType="fitXY"/>
    
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/home_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_banner"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/Theme.4BG1.Headline5"
        android:text="@string/home_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/home_fragment_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_title"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textAppearance="@style/Theme.4BB4G1.Body1"
        android:text="@string/home_subtitle"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/home_fragment_recycler_title"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_subtitle"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/home_recycler_title"
        android:textAppearance="@style/Theme.4BB4G1.Body1"
        android:textColor="@color/primaryVariant"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/home_fragment_recycler_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_fragment_recycler_title"
        >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_fragment_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/small_margin"
        tools:listitem="@layout/item_service"
        tools:itemCount="6"
        />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>