<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_fragment_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@id/fragment_login_button"
        app:cardElevation="@dimen/card_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_fragment_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/email_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_fragment_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_fragment_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/login_fragment_email_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/password_label"
                android:layout_marginTop="@dimen/small_margin"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_fragment_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberPassword"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_forgot_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="More Fonts..."
                android:text="@string/forgot_label"
                android:textColor="@color/primaryLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_fragment_password_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/primaryLight"
        app:layout_constraintBottom_toTopOf="@id/fragment_login_label1"
        android:text="@string/login_button_label"
        />
    
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_login_label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_button"
        app:layout_constraintStart_toStartOf="parent"
        android:text="No tengo cuenta"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textAppearance="@style/Theme.4BB4G1.Body1"
        app:layout_constraintEnd_toStartOf="@id/fragment_login_label2"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintStart_toEndOf="@id/fragment_login_label1"
        android:id="@+id/fragment_login_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/fragment_login_label1"
        app:layout_constraintBottom_toBottomOf="@id/fragment_login_label1"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/Theme.4BB4G1.Body1"
        android:text="Registrate ahora"
        android:layout_marginStart="@dimen/small_margin"
        android:textColor="@color/primaryVariant"/>

</androidx.constraintlayout.widget.ConstraintLayout>